--- a/src/Kritner.SolarProjection/Kritner.SolarProjection.csproj
+++ b/src/Kritner.SolarProjection/Kritner.SolarProjection.csproj
@@ -10,12 +10,8 @@ The package attempts to answer the question of "With a proposal of x kw generati
     <PackageProjectUrl>https://github.com/Kritner/Kritner.SolarProjection</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Kritner/Kritner.SolarProjection</RepositoryUrl>
     <PackageTags>solar, service, estimate calculator</PackageTags>
-    <Version>1.0.1</Version>
-    <PackageReleaseNotes>v1.0.1 
-adds xml documentation to classes
-
-v1.0.0
-initial release</PackageReleaseNotes>
+    <Version>1.0.2</Version>
+    <PackageReleaseNotes>Corrects some xml comments related to the projection service</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
