correcting path for test project in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
 - dotnet restore
 script:
 - dotnet build
-- dotnet test Kritner.SolarProjection.Tests/Kritner.SolarProjection.Tests.csproj
+- dotnet test src/Kritner.SolarProjection.Tests/Kritner.SolarProjection.Tests.csproj
